WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192242
[PSON] We are sometimes swapping processes even though there is an opened window with an opener link to us
https://bugs.webkit.org/show_bug.cgi?id=192242
Summary
[PSON] We are sometimes swapping processes even though there is an opened win...
Chris Dumez
Reported
2018-11-30 12:43:15 PST
We are sometimes swapping processes even though there is an opened window with an opener link to us, which is not Web-compatible.
Attachments
Patch
(8.58 KB, patch)
2018-11-30 13:57 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-11-30 13:57:01 PST
Created
attachment 356230
[details]
Patch
EWS Watchlist
Comment 2
2018-11-30 13:58:23 PST
Attachment 356230
[details]
did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:346: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:348: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:352: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] Total errors found: 3 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3
2018-11-30 14:16:16 PST
Comment on
attachment 356230
[details]
Patch r=me
Chris Dumez
Comment 4
2018-11-30 14:27:24 PST
Comment on
attachment 356230
[details]
Patch Clearing flags on attachment: 356230 Committed
r238755
: <
https://trac.webkit.org/changeset/238755
>
Chris Dumez
Comment 5
2018-11-30 14:27:26 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2018-11-30 14:28:44 PST
<
rdar://problem/46384268
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug