Source/WebCore/loader/PolicyChecker.cpp
@@ -106,6 +106,10 @@ void PolicyChecker::checkNavigationPolicy(ResourceRequest&& request, const Resou
         loader->setTriggeringAction(NavigationAction { action });
     }
 
+    if (m_frame.page() && m_frame.page()->openedViaWindowOpenWithOpener())
+        action.setOpenedViaWindowOpenWithOpener();
+    action.setHasOpenedFrames(m_frame.loader().hasOpenedFrames());
+
     // Don't ask more than once for the same request or if we are loading an empty URL.
     // This avoids confusion on the part of the client.
     if (equalIgnoringHeaderFields(request, loader->lastCheckedRequest()) || (!request.isNull() && request.url().isEmpty())) {
